--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,20 @@ Django = "==2.0.9"
 Collectfast = "==0.6.2"
 
 [dev-packages]
+ipdb = "==0.11"
+"psycopg2-binary" = "==2.7.5"
+mypy = "==0.641"
+pytest = "==3.9.1"
+pytest-sugar = "==0.9.1"
+"flake8" = "==3.5.0"
+coverage = "==4.5.1"
+django-debug-toolbar = "==1.10.1"
+django-extensions = "==2.1.3"
+pytest-django = "==3.4.3"
+Werkzeug = "==0.14.1"
+Sphinx = "==1.8.1"
+factory_boy = "==2.11.1"
+django_coverage_plugin = "==1.6.0"
 
 [requires]
 python_version = "3.7"
